added contact me section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div id="home" class="collapse show">
       <div class="card card-body bg-primary text-white py-5">
         <h2>Hvem er Jeg og Hvilket Skillset Kan Jeg Tilbyde NINE!</h2>
-        <p class="blockquote pt-1"> Mit navn er Hamza Laroussi og jeg er en 27 årige der prøver at få det meste ud af
+        <p class="blockquote pt-1"> Mit navn er Hamza Laroussi og jeg er en 27 årig der prøver at få det meste ud af
           livet, med mine høje ambitioner og mål, som jeg arbejder på dagligt og nyder rejsen med et smil på læben.
         </p>
       </div>
@@ -103,7 +103,7 @@
       <div class="card card-body py-5">
         <h3>Hvem er jeg?</h3>
         <p class="blockquote">
-          Jeg er generalt meget nysgerrig og passionaret.
+          Jeg er generelt meget nysgerrig og passioneret.
           <br>
           <br>
           Udover og sidde med frontend udvikling i min fritid, ligesom denne responsive hjemmeside jeg har lavet, elsker
@@ -111,10 +111,10 @@
           selvindsigt på livet.
           <br>
           <br>
-          Jeg er en tidligere iværkksætter, hvor jeg har haft mit eget smykke firma, hvor jeg havde 2 ansatte og det har
+          Jeg er en tidligere iværksætter, hvor jeg har haft mit eget smykke firma, hvor jeg havde 2 ansatte og det har
           lært mig utroligt meget om livet og business.
           <br>
-          Nu arbejder jeg med nogle af danmarks støreste virksomheder såsom Ecco, Leo Pharma m. fl. som Quality
+          Nu arbejder jeg med nogle af danmarks største virksomheder såsom Ecco, Leo Pharma m. fl. som Quality
           Assurance
           for virksomheden AKQA
           <br>
@@ -267,8 +267,8 @@
     <div id="resume" class="collapse">
       <div class="card card-body bg-success text-white py-5">
         <h2>Min Erhvervs Erfaring samt portifolio</h2>
-        <p class="blockquote">Jeg vil gerne highligt min tid som QA for AKQA som har givet mig erfaring med nogle af
-          danmarks størreste virksomheder.
+        <p class="blockquote">Jeg vil gerne highlight min tid som QA for AKQA som har givet mig erfaring med nogle af
+          Danmarks største virksomheder.
           <br>
           <br> Udover dette er jeg også super stolt af og have startet min egen virksomheden Westa Copenhagen IVS og mit
           frivillige arbejde hos Coding Pirates som jeg ved Ulrik der også arbejder for jer har været en del af.
@@ -288,7 +288,7 @@
                 </p>
               </div>
               <div class="col-md">
-                <h6 class="font-weight-bold">Dato: Jul. 2018 - Nuværende <br>(ca 2 år 7 måneder)</h6>
+                <h6 class="font-weight-bold">Dato: Jul. 2018 - Nuværende <br>(ca. 2 år 7 måneder)</h6>
               </div>
             </div>
             <hr>
@@ -370,7 +370,7 @@
               <p class="card-text blockquote pl-2">
                 Sitecore og .net udvikler. Fik erfaring med MVC, Glass mapper og sitecore 9.
                 <br>
-                Jeg arbejdede som udvikler for følgene kunder
+                Jeg arbejdede som udvikler for følgende kunder
               <ul>
                 <li>Leo Pharma</li>
                 <li>Horten</li>
@@ -396,7 +396,7 @@
               </div>
               <hr>
               <p class="card-text blockquote pl-2">
-                Jeg stifitede min egen virksomheden som solgte forskellige slags smukker ved brug af Facebook ads og
+                Jeg stiftede min egen virksomheden som solgte forskellige slags smykker ved brug af Facebook ads og
                 Shopify platformen.
                 <br>
                 <br>
@@ -425,13 +425,13 @@
               </div>
               <hr>
               <p class="card-text blockquote pl-2">
-                Slogte i de forskellige SegaFredo og Grab&Fly butikker. Opnået månedsmedarbejder 2 gange i mine
+                Solgte i de forskellige SegaFredo og Grab&Fly butikker. Opnået månedsmedarbejder 2 gange i mine
                 første 4 måneder og fik 100% score i alt lige fra service til upsells af mystery shopper 2
                 gange.
                 <br>
                 <br>
                 Udover og stå i butikken stod jeg også for forskellige administrative opgaver såsom
-                bestillingliste
+                bestillingsliste
                 osv.
               </p>
             </div>
@@ -581,7 +581,7 @@
         <p class="blockquote pl-2">Mit portifolio kan findes på github her <strong><a
               href="https://github.com/HamzaConnection" target="_blank">- Github portifolio</a></strong>
           <br>
-          Der er dog 29 projekter, men dem jeg gerne vil highligt dem som er Pinned i Overviewet
+          Der er dog 29 projekter, men dem jeg gerne vil highlight dem som er Pinned i Overviewet
       </div>
 
 
@@ -593,7 +593,8 @@
         <p class="blockquote">
           Her kan du se min uddannelse og de forskellige certificeringer og kurser jeg har taget.
           <br>
-          Jeg vil dog gerne highligt min Datamatik uddannelse og min certificering <a class="text-light" target="_blank"
+          Jeg vil dog gerne highlight min Datamatik uddannelse og min certificering <a class="text-light"
+            target="_blank"
             href="https://testhuset.dk/kursus/istqb-foundation/?gclid=CjwKCAiA57D_BRAZEiwAZcfCxWcJFaGN1uL5U49BYzpJsdklkK0V5fygcz7Ki5Yr0_IWwDXNyWUGzxoCEacQAvD_BwE">
             <u>ISTQB Foundation</u></a>
           hvor jeg fik den højeste score
@@ -664,7 +665,7 @@
               <br>
               International økonomi
               <br>
-              Mediafag
+              Mediefag
               <br>
             </p>
           </div>
@@ -697,7 +698,7 @@
         </div>
         <hr>
         <p class="card-text blockquote pl-2">
-          Jeg fik den højeste score i AKQA denmark selv min lærer sagde at det ikke var mange som havde en sådan
+          Jeg fik den højeste score i AKQA Denmark selv min lærer sagde at det ikke var mange som havde en sådan
           score.
           <br>
           <br>
@@ -721,11 +722,27 @@
           taget.
           <br>
           <br>
-          <a href="https://www.linkedin.com/in/hamzalaroussi/" target="_blank">Klik på linket og scroll ned til
-            kursus sectionen under Accomplishments</a>
+          <a class="text-light bg-dark" href="https://www.linkedin.com/in/hamzalaroussi/" target="_blank">Klik på linket
+            her
+            og scroll ned til
+            kursus sektionen under Accomplishments</a>
         </p>
       </div>
 
+    </div>
+
+    <div id="contact" class="collapse">
+      <div class="card card-body bg-danger text-white py-5">
+        <h2 class="pb-2 text-center">Kontakt Mig</h2>
+
+        <p class="blockquote pt-2 text-center">
+          <i class="fas fa-envelope fa-2x"></i>
+          <a class="text-light bg-dark p-2 ml-3 align-center"
+            href="mailto:HamzaConnection@hotmail.com">Hamzaconnection@hotmail.com</a>
+          <i class="fas fa-mobile-alt fa-2x ml-3"></i>
+          <a class="text-light bg-dark p-2 ml-3" href="tel:+4526922431">+45
+            26922431</a>
+      </div>
     </div>
 
 
