added contact me section

--- a/index.html
+++ b/index.html
@@ -578,8 +578,9 @@
       <div class="card card-body py-5">
         <h3>Portifolio</h3>
         <hr>
-        <p class="blockquote pl-2">Mit portifolio kan findes på github her <strong><a
-              href="https://github.com/HamzaConnection" target="_blank">- Github portifolio</a></strong>
+        <p class="blockquote pl-2">Mit portifolio kan findes på github her: <a href="https://github.com/HamzaConnection"
+            target="_blank" class="text-light bg-dark"> Github
+            portifolio</a>
           <br>
           Der er dog 29 projekter, men dem jeg gerne vil highlight dem som er Pinned i Overviewet
       </div>
