fix bug on iphone-x contact page

--- a/index.html
+++ b/index.html
@@ -734,15 +734,24 @@
 
     <div id="contact" class="collapse">
       <div class="card card-body bg-danger text-white py-5">
-        <h2 class="pb-2 text-center">Kontakt Mig</h2>
+        <h2 class="pb-2">Kontakt Mig</h2>
 
-        <p class="blockquote pt-2 text-center">
-          <i class="fas fa-envelope fa-2x"></i>
-          <a class="text-light bg-dark p-2 ml-3 align-center"
-            href="mailto:HamzaConnection@hotmail.com">Hamzaconnection@hotmail.com</a>
-          <i class="fas fa-mobile-alt fa-2x ml-3"></i>
-          <a class="text-light bg-dark p-2 ml-3" href="tel:+4526922431">+45
-            26922431</a>
+        <div class="row">
+          <div class="col-md-6 mt-4">
+            <i class="fas fa-envelope fa-2x ml-1"></i>
+            <a class="text-light bg-dark p-2 ml-3"
+              href="mailto:HamzaConnection@hotmail.com">Hamzaconnection@hotmail.com</a>
+          </div>
+
+          <div class="col-md-6 mt-4">
+            <i class="fas fa-mobile-alt fa-2x ml-3"></i>
+            <a class="text-light bg-dark p-2 ml-3" href="tel:+4526922431">+45
+              26922431</a>
+          </div>
+
+        </div>
+
+
       </div>
     </div>
 
@@ -752,7 +761,7 @@
 
         <div class="row">
           <div class="col-md-6">
-            <!--TODO insert a link to a danish version of your resume-->
+            <!--TODO insert a link to a danish version of your resume in pdf format-->
             <a href="/img/hamza-linkedin-compressed.jpg" download="FileName.jpg" class="btn btn-outline-light">
               <i class="fas fa-cloud"></i>
               Download CV
