added back to top button

--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
       </div>
     </div>
 
-    <button id="BackToTopBtn" title="Til Toppen"><i class="fas fa-chevron-up"></i></button>
+    <button id="BackToTopBtn" class="btn btn-light"><i class="fas fa-chevron-up"></i></button>
 
 
     <footer id="main-footer" class="p-5 bg-dark text-white">
