--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         <h4>Express.js</h4>
         <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:40%"></div>
+          <div class="progress-bar bg-success" style="width:30%"></div>
         </div>
         <h4>Webpack 5</h4>
         <div class="progress mb-3">
@@ -153,7 +153,7 @@
         </div>
         <h4>CSS</h4>
         <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:40%"></div>
+          <div class="progress-bar bg-success" style="width:30%"></div>
         </div>
         <h4>Bootstrap 4</h4>
         <div class="progress mb-3">
@@ -169,7 +169,7 @@
         </div>
         <h4>REST API</h4>
         <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:30%"></div>
+          <div class="progress-bar bg-success" style="width:25%"></div>
         </div>
         <h4>HTML5</h4>
         <div class="progress mb-3">
@@ -177,11 +177,11 @@
         </div>
         <h4>C#</h4>
         <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:50%"></div>
+          <div class="progress-bar bg-success" style="width:30%"></div>
         </div>
         <h4>GIT</h4>
         <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:40%"></div>
+          <div class="progress-bar bg-success" style="width:20%"></div>
         </div>
         <h4>Typescript</h4>
         <div class="progress mb-3">
@@ -193,7 +193,7 @@
         </div>
         <h4>ESLint</h4>
         <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:10%"></div>
+          <div class="progress-bar bg-success" style="width:5%"></div>
         </div>
         <h4>Ghost Inspector - Test Automation</h4>
         <div class="progress mb-3">
@@ -205,7 +205,7 @@
         </div>
         <h4>Postman API</h4>
         <div class="progress mb-3">
-          <div class="progress-bar bg-success" style="width:30%"></div>
+          <div class="progress-bar bg-success" style="width:20%"></div>
         </div>
         <h4>Trello</h4>
         <div class="progress mb-3">
@@ -271,7 +271,7 @@
           Danmarks største virksomheder.
           <br>
           <br> Udover dette er jeg også super stolt af og have startet min egen virksomheden Westa Copenhagen IVS og mit
-          frivillige arbejde hos Coding Pirates som jeg ved Ulrik der også arbejder for jer har været en del af.
+          frivillige arbejde hos Coding Pirates som jeg kan se Ulrik der også arbejder for jer har været en del af.
         </p>
       </div>
 
@@ -582,7 +582,7 @@
             target="_blank" class="text-light bg-dark"> Github
             portifolio</a>
           <br>
-          Der er dog 29 projekter, men dem jeg gerne vil highlight dem som er Pinned i Overviewet
+          Der er dog 29 projekter, men dem jeg gerne vil highlight er dem som er Pinned i Overviewet
       </div>
 
 
@@ -761,23 +761,24 @@
     <footer id="main-footer" class="p-5 bg-dark text-white">
       <div class="container">
 
-        <div class="row">
-          <div class="col-md-6">
-            <!--TODO insert a link to a danish version of your resume in pdf format-->
-            <a href="/img/hamza-linkedin-compressed.jpg" download="FileName.jpg" class="btn btn-outline-light">
+        <!--<div class="row">
+           <div class="col-md-6">
+            TODO insert a link to a danish version of your resume in pdf format
+            <a href="/" download="resume.pdf" class="btn btn-outline-light">
               <i class="fas fa-cloud"></i>
               Download CV
             </a>
           </div>
-          <div class="row">
-            <div class="col pt-2 pl-4 text-center">
-              <p>Copyright &copy; <span id="year"></span></p>
-            </div>
+          -->
+        <div class="row">
+          <div class="col pt-2 pl-4 text-center">
+            <p>Copyright &copy; <span id="year"></span></p>
           </div>
         </div>
-
       </div>
-    </footer>
+
+  </div>
+  </footer>
 
 
 
@@ -785,19 +786,19 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-      integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"
-      integrity="sha512-YibiFIKqwi6sZFfPm5HNHQYemJwFbyyYHjrr3UT+VobMt/YBo1kBxgui5RWc4C3B4RJMYCdCAJkbXHt+irKfSA=="
-      crossorigin="anonymous"></script>
-    <script src="main.js">
-    </script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+    integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"
+    integrity="sha512-YibiFIKqwi6sZFfPm5HNHQYemJwFbyyYHjrr3UT+VobMt/YBo1kBxgui5RWc4C3B4RJMYCdCAJkbXHt+irKfSA=="
+    crossorigin="anonymous"></script>
+  <script src="main.js">
+  </script>
   </div>
 </body>
 
