--- a/index.html
+++ b/index.html
@@ -737,15 +737,14 @@
         <h2 class="pb-2">Kontakt Mig</h2>
 
         <div class="row">
-          <div class="col-md-6 mt-4">
+          <div class="col-md-6 mt-3">
             <i class="fas fa-envelope fa-2x ml-1"></i>
-            <a class="text-light bg-dark p-2 ml-3"
-              href="mailto:HamzaConnection@hotmail.com">Hamzaconnection@hotmail.com</a>
+            <a class="text-light bg-dark p-1" href="mailto:HamzaConnection@hotmail.com">Hamzaconnection@hotmail.com</a>
           </div>
 
-          <div class="col-md-6 mt-4">
+          <div class="col-md-6 mt-3">
             <i class="fas fa-mobile-alt fa-2x ml-1"></i>
-            <a class="text-light bg-dark p-2 ml-3" href="tel:+4526922431">+45
+            <a class="text-light bg-dark p-1" href="tel:+4526922431">+45
               26922431</a>
           </div>
 
